# camera_lidar_object_detector

./: CMakeLists.txt  ObjDetector.cpp  README.md  build.sh  config.ini  record_data.sh
data/: distortion  extrinsic  intrinsic
demo/: Makefile  cmake_install.cmake  demo_online
doc/: K-MEANS vs DBSCAN.md  calibration.md
lib/: lidar_clustering.cpp  lidar_clustering.h  lidar_data_types.h  lidar_out.cpp  lidar_out.h  lidar_worker.cpp  lidar_worker.h  udp_worker.cpp  udp_worker.h
src/: ConfigParser.cpp  ConfigParser.h  dbscan.cpp  dbscan.h  key.cpp  key.h  planar_segmentation.cpp  planar_segmentation.h  projection.cpp  projection.h  visualization.cpp  visualization.h  yolo.cpp  yolo.h
